--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h3 class="name">焦糖馬卡龍</h3>
                         <p class="price">NT$ 450</p>
                     </div>
-                    <a href="#" class="addToCart">加入購物車</a>
+                    <button class="addToCart">加入購物車</button>
                 </li>
                 <li data-aos="flip-right">
                     <div class="productImg">
@@ -71,7 +71,7 @@
                         <h3 class="name">焦糖馬卡龍</h3>
                         <p class="price">NT$ 450</p>
                     </div>
-                    <a href="#" class="addToCart">加入購物車</a>
+                    <button class="addToCart">加入購物車</button>
                 </li>
                 <li data-aos="flip-left">
                     <div class="productImg">
@@ -83,7 +83,7 @@
                         <h3 class="name">焦糖馬卡龍</h3>
                         <p class="price">NT$ 450</p>
                     </div>
-                    <a href="#" class="addToCart">加入購物車</a>
+                    <button class="addToCart">加入購物車</button>
                 </li>
                 <li data-aos="flip-right">
                     <div class="productImg">
@@ -95,7 +95,7 @@
                         <h3 class="name">焦糖馬卡龍</h3>
                         <p class="price">NT$ 450</p>
                     </div>
-                    <a href="#" class="addToCart">加入購物車</a>
+                    <button class="addToCart">加入購物車</button>
                 </li>
                 <li data-aos="flip-left">
                     <div class="productImg">
@@ -107,7 +107,7 @@
                         <h3 class="name">焦糖馬卡龍</h3>
                         <p class="price">NT$ 450</p>
                     </div>
-                    <a href="#" class="addToCart">加入購物車</a>
+                    <button class="addToCart">加入購物車</button>
                 </li>
                 <li data-aos="flip-right">
                     <div class="productImg">
@@ -119,7 +119,7 @@
                         <h3 class="name">焦糖馬卡龍</h3>
                         <p class="price">NT$ 450</p>
                     </div>
-                    <a href="#" class="addToCart">加入購物車</a>
+                    <button class="addToCart">加入購物車</button>
                 </li>
             </ul>
             <ul class="page">
@@ -138,7 +138,7 @@
                 <h2>訂閱你我的甜蜜郵件</h2>
             </label>
             <div class="mail">
-                <div class="mailIcon"><span class="material-icons">email</span></div>
+                <span class="mailIcon material-icons">email</span>
                 <input id="mail" class="mailInput" type="text" placeholder="mail" name="mail">
                 <button type="submit">
                     <span class="material-icons">east</span>
